fixed bug where invisible graph existed

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ body {
   z-index: 10;
   bottom: 5%;
   right: 0%;
-  height: 600px;
-  width: 600px;
+  height: 0px;
+  width: 0px;
   margin: auto;
 }
 
@@ -154,8 +154,8 @@ body {
     z-index: 10;
     bottom: 5%;
     right: 0%;
-    height: 600px;
-    width: 1100px;
+    height: 0px;
+    width: 0px;
     margin: auto;
   }
 
